--- a/src/main/resources/templates/linshi.html
+++ b/src/main/resources/templates/linshi.html
@@ -196,7 +196,7 @@
                         tr.append("<td>" + isNull(data[num].incomdateStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].nativePlaStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].isQuitStr) + "</td>");
-                        td += " <td><a class=\"btn btn-xs btn-primary\" \n" +
+                        td = " <td><a class=\"btn btn-xs btn-primary\" \n" +
                             "onclick=\"updateEmployee(" + data[num].id + ");\">编辑</a>\n" +
                             "  <a class=\"btn btn-xs btn-primary\"\n" +
                             " onclick=\"deleteEmployee(" + data[num].id + ");\">删除</a>\n" +
@@ -327,7 +327,7 @@
                         tr.append("<td>" + isNull(data[num].incomdateStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].nativePlaStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].isQuitStr) + "</td>");
-                        td += " <td><a class=\"btn btn-xs btn-primary\" \n" +
+                        td = " <td><a class=\"btn btn-xs btn-primary\" \n" +
                             "onclick=\"updateEmployee(" + data[num].id + ");\">编辑</a>\n" +
                             "  <a class=\"btn btn-xs btn-primary\"\n" +
                             " onclick=\"deleteEmployee(" + data[num].id + ");\">删除</a>\n" +
