--- a/src/main/resources/templates/monthkqinfo.html
+++ b/src/main/resources/templates/monthkqinfo.html
@@ -545,9 +545,10 @@
                                             &nbsp;&nbsp;
                                             <a class="btn btn-primary"
                                                href="javascript:void(0);" onclick="queryZKOUTDataByCondition()">查找</a>
-                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                            <a class="btn btn-primary"
-                                               href="javascript:void(0);" onclick="checkZKOUTDataByCondition()">启用</a>
+                                            <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+                                            <!--<a class="btn btn-primary"-->
+                                               <!--href="javascript:void(0);" onclick="checkZKOUTDataByCondition()">启用</a>-->
+                                           <!---->
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             <a class="btn btn-primary"
                                                href="javascript:void(0);" onclick="computeSignKQByMonth()">签字数据生成</a>
@@ -585,7 +586,7 @@
                         <br>
                         <i class="fa fa-sort-desc" onclick="sortByDesc('name')" aria-hidden="true"></i>
                     </th>
-                    <th style="text-align: center">
+                    <th sty le="text-align: center">
                         星期
                     </th>
                     <th style="text-align: center" id="day1week">
