--- a/src/main/resources/templates/mainindex.html
+++ b/src/main/resources/templates/mainindex.html
@@ -83,7 +83,7 @@
         <li data-popover="false"
             data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>."
             data-placement="right"><a href="#" data-target=".premium-menuforsalor" class="nav-header collapsed"
-                                      data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> 订单<i
+                                      data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> 销售中心<i
                 class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="premium-menuforsalor nav nav-list collapse">
@@ -107,6 +107,24 @@
                 <li>
                     <a th:href="@{/project/tomainpage}" target="targetText"><span
                             class="fa fa-caret-right"></span>数据导入</a></li>
+            </ul>
+        </li>
+
+
+
+        <li data-popover="false"
+            data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>."
+            data-placement="right"><a href="#" data-target=".premium-menuforsalorac" class="nav-header collapsed"
+                                      data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> 深化设计<i
+                class="fa fa-collapse"></i></a></li>
+        <li>
+            <ul class="premium-menuforsalorac nav nav-list collapse">
+                <li><a th:href="@{/design/toMaterialNeed}" target="targetText"><span
+                        class="fa fa-caret-right"></span>材料需求</a></li>
+
+                <li>
+                    <a th:href="@{/design/toShowTip}" target="targetText"><span
+                            class="fa fa-caret-right"></span>提示信息</a></li>
             </ul>
         </li>
 
